setup to publish to jitpack

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,6 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "Infinity RecyclerView Scrolling"
+rootProject.name = "Endless Recycler View"
 include ':app'
 include ':endlessrecylerview'
